# quant-board-core

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cliff.toml  git-cliff-hook.sh  pyproject.toml  test.db
.github/workflows/: changelog.yml
app/: ddl.sql  main.py
app/database/: connection.py
app/models/: stock_model.py
app/routers/: stocks.py
app/schemas/: stock_schema.py
app/services/: stock_service.py
tests/: test_main.py
